MNFST-pod-v1.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: Dmitry_Sakhno
spec:
  containers:
    - name: test
      image: amizory/k8s-practice:latest
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 81
