dpl-pv-pvc-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-pv-pvc-local
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-pv-pvc-local
  template:
    metadata:
      labels:
        app: test-pv-pvc-local
    spec:
      containers:
        - name: test-pv-pvc-local-container
          image: nginx
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /testlocal
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-data
