delpoy-hpa-services-two-containers.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test2containers
spec:
  selector:
    matchLabels:
      app: port2containers
  template:
    metadata:
      labels:
        app: port2containers
    spec:
      containers:
        - name: nginx-web
          image: nginx:stable-perl
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
        - name: lorem
          image: amizory/k8s-practice:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 82
---
apiVersion: v1
kind: Service
metadata:
  name: service2port
spec:
  type: LoadBalancer
  selector:
    app: port2containers
  ports:
    - port: 80
      protocol: TCP
      name: web
      targetPort: 80
    - port: 82
      protocol: TCP
      name: text
      targetPort: 82
