manifest-services-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myappservice
  labels:
    autor: Dmitry_Sakhno
spec:
  replicas: 4
  selector:
    matchLabels:
      app: appservice
  template:
    metadata:
      labels:
        app: appservice
    spec:
      containers:
        - name: jule11
          image: amizory/k8s-practice:v1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    text: abcd
spec:
  selector:
    app: appservice
  ports:
    - port: 80
      name: port-connection
      protocol: TCP
      targetPort: 80
  type: LoadBalancer
